# INKA

./: .env.example  .gcloudignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  STRUCTURE.md  cloudbuild.yaml  docker-compose.local.yml  docker-compose.yml  package.json  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
apps/admin/: Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
apps/admin/src/: App.tsx
apps/admin/src/api/: client.ts
apps/admin/src/layouts/: DashboardLayout.tsx
apps/admin/src/pages/: Setup.tsx
apps/admin/src/stores/: auth.ts
apps/admin/src/test/: auth.test.ts
apps/api/: Dockerfile
apps/api/src/: Dockerfile  app.py  requirements.txt
apps/api/src/app/: health.py  logging.py  main.py  settings.py
apps/api/src/v1/: api.py
apps/bot/: Dockerfile
apps/bot/src/: Dockerfile  main.py  requirements.txt
apps/bot/src/bot/: main.py  states.py
apps/bot/src/handlers/: base.py  booking.py  management.py
apps/bot/src/keyboards/: base.py  booking.py
apps/bot/src/middlewares/: auth.py  i18n.py  logging.py  rate_limit.py
apps/bot/src/states/: booking.py
apps/bot/src/utils/: i18n.py
docs/architecture/: README.md
docs/development/: setup.md
docs/operations/: DEPLOY_RU.md  deployment.md
libs/core/src/: config.py  logging.py
libs/core/src/core/: config.py  logging_config.py
libs/core/src/crud/: base.py  crud_booking.py  crud_role.py
libs/core/src/models/: attachment.py  audit.py  booking.py  client.py  master.py  permission.py  role.py  schedule.py  service.py  user.py
libs/core/src/schemas/: booking.py  role.py
libs/database/: alembic.ini
libs/database/alembic/: env.py
libs/database/src/: base.py  init_db.py  session.py
libs/observability/src/: logging_config.py
libs/orchestrator/src/: graph.py  state.py
libs/orchestrator/tests/: test_graph.py
scripts/: deploy.sh  deploy_gcp.sh  start-local.sh
(+33 files in other folders)
