[project]
name = "inka"
version = "0.1.0"
description = "INKA Tattoo Salon Admin - Unified Monorepo"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "aiogram==3.3.0",
    "sqlalchemy==2.0.25",
    "alembic==1.13.1",
    "psycopg2-binary==2.9.9",
    "pydantic==2.6.0",
    "pydantic-settings==2.1.0",
    "python-json-logger==2.0.7",
    "redis==5.0.1",
    "google-cloud-secret-manager==2.20.0",
    "google-cloud-storage==2.14.0",
    "phonenumbers==8.13.30",
]

[project.optional-dependencies]
dev = [
    "pytest==8.0.0",
    "pytest-asyncio==0.23.5",
    "pytest-cov==4.1.0",
    "httpx==0.26.0",
    "ruff==0.2.1",
    "mypy==1.8.0",
    "black==24.1.1",
    "pre-commit==3.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["libs/core/src", "libs/database/src", "libs/observability/src"]

[tool.ruff]
line-length = 88
target-version = "py311"
extend-include = ["apps/**/*.py", "libs/**/*.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "S", "B", "A", "C4", "DTZ", "T20", "PT", "RET", "SIM", "ARG", "PTH", "ERA", "PL", "RUF"]
ignore = ["S101"]  # Allow assert in tests

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = ["S101", "PLR2004"]
"**/alembic/**/*.py" = ["PLR2004", "ARG001"]

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  | node_modules
  | .venv
  | venv
)/
'''

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["node_modules", "venv", ".venv"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["apps/api/tests", "apps/bot/tests", "libs/core/tests"]
addopts = "--cov=apps --cov=libs --cov-report=html --cov-report=term-missing"
